[P1] Small fix, wrap up

--- a/src/components/UI/Nav/Nav.module.scss
+++ b/src/components/UI/Nav/Nav.module.scss
@@ -1,20 +1,28 @@
 @use "../../../styles/_mixins.scss" as styles;
 
 .nav {
-    
+
     .navLinks {
         display: flex;
         gap: 32px;
         padding: 0 32px;
-    
+
         @include styles.tablet-only {
             padding: 0;
         }
-    
+
         li {
             display: flex;
+
+            svg {
+
+                &:hover {
+                    fill: var(--secondary-color);
+                }
+            }
+
         }
-    
+
         button {
             cursor: pointer;
             color: var(--text-primary);
